--- a/wp-content/themes/solustrid/style.css
+++ b/wp-content/themes/solustrid/style.css
@@ -6385,7 +6385,7 @@ a.ui-button:active,
   text-align: center;
   z-index: 1;
   padding: 34px 15px 50px;
-  background-color: #f3f5f9;
+  background-color: #e11739;
   border-bottom: 3px solid #001e57;
   -webkit-transition: all 500ms ease;
   -moz-transition: all 500ms ease;
@@ -12221,4 +12221,19 @@ rs-bullet.tp-bullet.selected {
 }
 .msg-footer {
   border-right: 2px solid #ec1c24;
+}
+.csr-info{
+  display: block;
+  max-width: 264px;
+  margin: 0 auto;
+  font-size: 18px !important;
+  line-height: 1.5 !important;
+  color: white !important;
+}
+.csr-block:hover .csr-info{
+  color: white;
+}
+
+.map{
+  min-height: 400px;
 }
