--- a/css/style.css
+++ b/css/style.css
@@ -1286,3 +1286,130 @@
     font-size: 
     18px;
 }
+
+/* adds some margin below the link sets  */
+/* .navbar .dropdown-menu div[class*="col"] {
+    margin-bottom:1rem;
+ } */
+ 
+ .navbar .dropdown-menu {
+   border:none;
+ }
+ 
+ /* breakpoint and up - mega dropdown styles */
+ @media screen and (min-width: 992px) {
+   
+   /* remove the padding from the navbar so the dropdown hover state is not broken */
+ .navbar {
+   padding-top:0px;
+   padding-bottom:0px;
+ }
+ 
+ /* remove the padding from the nav-item and add some margin to give some breathing room on hovers */
+ .navbar .nav-item {
+   padding:.5rem .5rem;
+   margin:0 .25rem;
+ }
+ 
+ /* makes the dropdown full width  */
+ .navbar .dropdown {position:static;}
+ 
+ .navbar .dropdown-menu {
+    width: 100%;
+    left: 0;
+    right: 0;
+    top: 96%;
+    display: block;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.3s linear;
+}
+   
+  
+ 
+   
+   /* shows the dropdown menu on hover */
+ .navbar .dropdown:hover .dropdown-menu, .navbar .dropdown .dropdown-menu:hover {
+   display:block;
+   visibility: visible;
+   opacity: 1;
+   transition: visibility 0s, opacity 0.3s linear;
+ }
+   
+   .navbar .dropdown-menu {
+     border: 1px solid rgba(0,0,0,.15);
+     background-color: #fff;
+   }
+ 
+ }
+ 
+
+ .navbar-light .navbar-nav .nav-link {
+    color: #272727;
+    font-weight: 700;
+    font-size: 15px;
+    padding: 0px 3px;
+}
+
+.navbar .nav-item {
+    padding: 0 .5rem;
+    margin: 0px;
+}
+@media(min-width : 992px){
+    .navbar-light .navbar-nav > .nav-item > .nav-link{
+        line-height: 88px;
+    }
+    .navbar .dropdown-menu {
+        background-color: rgb(39 39 39);
+    }
+}
+
+.dropdown-menu .accordion .nav-item{
+
+}
+
+.dropdown-menu .accordion .nav-item .nav-link{
+    font-size: 14px;
+    opacity: .8;
+    margin-bottom: 4px;
+}
+.menu-title {
+    font-size: 15px;
+    font-weight: 700;
+    display: block;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #dfdfdf;
+    padding-bottom: 8px;
+}
+.accordion-link:not(.collapsed), .accordion-link:hover{
+    color: #e11739!important;
+}
+.maga-menu-link:hover{
+    color: #e11739!important;
+}
+.accordion-link{
+    position: relative;
+}
+.accordion-link::after{
+    content: "\f13a";
+    font-family: FontAwesome;
+}
+.accordion-link:not(.collapsed)::after{
+    transform: rotate(180deg);
+    display: inline-block;
+}
+.mega-column {
+    background: #f3f5f9;
+    height: 100%;
+    padding: 20px;
+}
+@media (max-width:992px) {
+    .navbar-light .navbar-nav .nav-link {
+        padding-bottom: 10px;
+        padding-top: 10px;
+        border-top: 1px solid #e9e9e9;
+    }
+    .navbar-light .navbar-nav .nav-item:first-child .nav-link{
+        border-top: 0px;
+    }
+}
