--- a/wp-content/themes/solustrid/style.css
+++ b/wp-content/themes/solustrid/style.css
@@ -376,7 +376,7 @@ li {
   background-color: #fff;
   background-position: center center;
   background-repeat: no-repeat;
-  background-image: url(assets/images/icons/preloader.svg);
+  background-image: url(assets/images/icons/preloader.gif);
 }
 img {
   display: inline-block;
