--- a/css/style.css
+++ b/css/style.css
@@ -1445,3 +1445,6 @@
 .testimonial-carousel.owl-carousel .owl-stage .testimonial-block-one .inner-box .upper{
     flex: 1;
 }
+.fa-phone{
+    transform: scale(-1) rotate(180deg);
+}
