slider text overlaping and about us text justify

--- a/css/style.css
+++ b/css/style.css
@@ -1538,3 +1538,14 @@ aside.product-sidebar ul .nav-item a:hover{
     left: 50%;
     transform: translateX(-50%);
   }
+@media(min-width:760px){
+    rs-mask-wrap{
+        padding-left: 70px;
+    }
+}
+@media(max-width:760px){
+    rs-slide .theme-btn{
+    padding: 10px 16px;
+    font-size: 14px;
+    }
+}
